# samurai-euler

./: CMakeLists.txt  LICENSE  main_1d.cpp  main_2d.cpp  main_user_pred_1d.cpp  readme.md
conda/: environment.yml
euler/: config.hpp  eos.hpp  prediction.hpp  save.hpp  schemes.hpp  user_bc.hpp  utils.hpp  variables.hpp
euler/init/: cases.hpp  double_mach.hpp  registry.hpp  riemann_2d.hpp  sedov_blast.hpp  sod.hpp
euler/schemes/: flux.hpp  hll.hpp  hllc.hpp  rusanov.hpp
python/: reconstruct.py
